remove randiance files

--- a/vanguard/src/main/webapp/WEB-INF/index.html
+++ b/vanguard/src/main/webapp/WEB-INF/index.html
@@ -7,11 +7,12 @@
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="./src/css/common.css">
 <link rel="stylesheet" href="./src/css/index.css">
+<link rel="stylesheet" href="./src/css/animate.min.css">
 <title>海逍遥</title>
 </head>
 <body>
-    <header class="header hidden">
-        <nav class="navbar navbar-default navbar-fixed-top animated js-fixed-nav fade-out-up">
+    <header class="header">
+        <nav class="navbar navbar-default navbar-fixed-top animated slideInDown">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a href="/" class="no-underline"> <span class="h3">海逍遥</span></a>
@@ -21,43 +22,7 @@
     </header>
     <div class="intro">
         <div class="container-fluid">
-            <div class="cards">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-4 col-lg-4">
-                        <div class="card">
-                            <div class="card-img card-all">
-                                <span class="glyphicon glyphicon-plane"></span>
-                            </div>
-                            <div class="card-content text-center">
-                                <h4>所有旅游</h4>
-                                <span>海逍遥去过很多地方，欢迎您跟我们一起</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-lg-4">
-                        <div class="card">
-                            <div class="card-img card-hot">
-                                <span class="glyphicon glyphicon-heart"></span>
-                            </div>
-                            <div class="card-content text-center">
-                                <h4>热门旅游</h4>
-                                <span>看看其他驴友喜欢的风景，一同出发！</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xs-12 col-md-4 col-lg-4">
-                        <div class="card">
-                            <div class="card-img card-about">
-                                <span class="glyphicon glyphicon-asterisk"></span>
-                            </div>
-                            <div class="card-content text-center">
-                                <h4>关于我们</h4>
-                                <span>了解海逍遥，带您去您喜欢的地方</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 
