--- a/radiance/login.html
+++ b/radiance/login.html
@@ -63,10 +63,13 @@
     <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-6/esl.js"></script>
     <script type="text/javascript">
                     require.config({
-                        'baseUrl': './src/js',
-                        'paths': {
-                            'lib': 'lib'
-                        }
+                        'baseUrl': 'src',
+                        'paths': { 'lib': 'lib' },
+                        'packages': [{
+                                'name': 'etpl',
+                                'location': '../dep/etpl/3.0.1/src',
+                                'main': 'main'
+                            }]
                     })
                     require(['user/login']);
                 </script>
