添加mock的功能& 首页的初步重构

--- a/radiance/index.html
+++ b/radiance/index.html
@@ -5,21 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="lib/animate.min.css">
-<link rel="stylesheet" href="src/css/common.css">
-<link rel="stylesheet" href="src/css/index.css">
+<link rel="stylesheet" href="tool/animate.min.css">
+<link rel="stylesheet" href="src/resources/css/common.css">
+<link rel="stylesheet" href="src/resources/css/index.css">
 <title>海逍遥</title>
 </head>
 <body>
-    <header class="header">
-        <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a href="/" class="no-underline"> <span class="h3">海逍遥</span></a>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <header class="header"></header>
     <div class="intro">
         <div class="container-fluid">
             
@@ -52,11 +44,11 @@
                     <div class="footer-content col-xs-6 col-md-6 col-lg-6">@2015 海逍遥公司</div>
                     <div class="footer-qr col-xs-3 col-md-3 col-lg-3">
                         <h4>官方微信公众号</h4>
-                        <img alt="官方二维码" width="120" height="150" src="./src/img/hxy-qr.jpg">
+                        <img alt="官方二维码" width="120" height="150" src="./src/resources/img/hxy-qr.jpg">
                     </div>
                     <div class="footer-qr col-xs-3 col-md-3 col-lg-3">
                         <h4>推荐公众号</h4>
-                        <img alt="桃小橙二维码" width="120" height="150" src="./src/img/txc-qr.jpg">
+                        <img alt="桃小橙二维码" width="120" height="150" src="./src/resources/img/txc-qr.jpg">
                     </div>
                 </div>
             </div>
