--- a/radiance/index.html
+++ b/radiance/index.html
@@ -6,17 +6,12 @@
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="tool/animate.min.css">
-<link rel="stylesheet" href="src/resources/css/common.css">
-<link rel="stylesheet" href="src/resources/css/index.css">
+<link rel="stylesheet" href="src/resources/css/style.css">
 <title>海逍遥</title>
 </head>
 <body>
     <header class="header"></header>
-    <div class="intro">
-        <div class="container-fluid">
-            
-        </div>
-    </div>
+    <div class="intro"></div>
 
     <section class="hot-travel-list">
         <div class="container-fluid">
