--- a/radiance/index.html
+++ b/radiance/index.html
@@ -65,6 +65,7 @@
     <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-6/esl.js"></script>
+    <script src="http://unslider.com/unslider.js"></script>
     <script type="text/javascript">
                     require.config({
                         'baseUrl': 'src',
