--- a/radiance/index.html
+++ b/radiance/index.html
@@ -32,36 +32,7 @@
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="container-fluid">
-            <div class="footer-main">
-                <div class="row">
-                    <div class="footer-content col-xs-6 col-md-6 col-lg-6">@2015 海逍遥公司</div>
-                    <div class="footer-qr col-xs-3 col-md-3 col-lg-3">
-                        <h4>官方微信公众号</h4>
-                        <img alt="官方二维码" width="120" height="150" src="./src/resources/img/hxy-qr.jpg">
-                    </div>
-                    <div class="footer-qr col-xs-3 col-md-3 col-lg-3">
-                        <h4>推荐公众号</h4>
-                        <img alt="桃小橙二维码" width="120" height="150" src="./src/resources/img/txc-qr.jpg">
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div class="footer-copyright">
-                <div class="row">
-                    <div class="col-xs-12 col-md-6 col-lg-6">
-                        <p>
-                            © 2015 <a href="/" class="no-underline">海逍遥公司</a> - All rights reserved.
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-sm-6 col-lg-6 text-right">
-                        <p>15001028030</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <footer class="footer"></footer>
     <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="http://s1.bdstatic.com/r/www/cache/ecom/esl/2-0-6/esl.js"></script>
