--- a/radiance/404.html
+++ b/radiance/404.html
@@ -9,7 +9,7 @@
         <div class="error-wrapper">
             <div class="error">
                 ~ 对不起，您需要的页面不存在 ~<br />
-                <a href="/index.html">返回主页</a>
+                <a href="/">返回主页</a>
             </div>
         </div>
     </body>
