首页初步完成

--- a/radiance/index.html
+++ b/radiance/index.html
@@ -13,22 +13,9 @@
     <header class="header"></header>
     <div class="intro"></div>
 
-    <section class="hot-travel-list">
+    <section class="travel-container">
         <div class="container-fluid">
-            <div class="section-title">
-                <hr>
-                <div class="title-content text-center">热门旅游</div>
-            </div>
-            <div class="hots"></div>
-            <div class="more-hots">
-                <div class="row">
-                    <!--  暂时还没有几个，所以就不加这个链接，但是别删掉，后面加
-                    <div class="pull-right">
-                        <a href="/">更多旅游 >>> </a>
-                    </div>
-             -->
-                </div>
-            </div>
+            <div class="travels"></div>
         </div>
     </section>
 
