--- a/radiance/404.html
+++ b/radiance/404.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="shortcut icon" type="image/ico" href="src/resources/img/favicon.ico" />
         <title>欢迎来到传说中的 404 页面</title>
     </head>
 
